--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     overflow: hidden;
 }
 .button-2 p {
+    display: inline;
     font-size: 16px;
     color: #34495e;
     text-decoration: none;
