--- a/style.css
+++ b/style.css
@@ -4,68 +4,76 @@ body {
     font-family: "Noto Sans KR", sans-serif;
 }
 
-.btnWrap {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-.button-2 {
-    margin: 0;
-    padding: 0;
-    width: 140px;
-    height: 50px;
-    border: 2px solid #34495e;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    position: relative;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-.button-2 p {
-    display: inline;
-    font-size: 16px;
-    color: #34495e;
-    text-decoration: none;
-    line-height: 50px;
-    transition: all 0.5s ease;
-    z-index: 2;
-    position: relative;
-}
-.eff-2 {
-    width: 140px;
-    height: 50px;
-    top: -50px;
-    background: #34495e;
-    position: absolute;
-    transition: all 0.5s ease;
-    z-index: 1;
-}
-.button-2:hover .eff-2 {
-    top: 0;
-}
-.button-2:hover p {
-    color: #fff;
-}
-
 .wrapper {
     padding: 100px;
-    width: 900px;
+    width: 80vmin;
     display: block;
     text-align: center;
     margin: 0 auto;
 }
 
 .roles {
-    /* padding: 100px; */
-    font-size: 50px;
-    height: 90px;
+    font-size: 3vmin;
+    height: 5vmin;
     vertical-align: middle;
     overflow: hidden;
 }
 
 .roles div {
-    height: 90px;
+    height: 5vmin;
     transition: margin-top 0.5s ease-in-out;
+    overflow: hidden;
+}
+
+:root {
+    --button-color: #ffffff;
+    --button-bg-color: #0d6efd;
+    --button-hover-bg-color: #025ce2;
+}
+
+button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    background: var(--button-bg-color);
+    color: var(--button-color);
+
+    margin: 0;
+    padding: 0.5rem 1rem;
+
+    font-family: "Noto Sans KR", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: center;
+    text-decoration: none;
+
+    border: none;
+    border-radius: 4px;
+
+    display: inline-block;
+    width: auto;
+
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+        0 2px 4px -1px rgba(0, 0, 0, 0.06);
+
+    cursor: pointer;
+
+    transition: 0.5s;
+}
+
+button:active,
+button:hover,
+button:focus {
+    background: var(--button-hover-bg-color);
+    outline: 0;
+}
+button:disabled {
+    opacity: 0.5;
+}
+
+form {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
