--- a/style.css
+++ b/style.css
@@ -6,21 +6,21 @@ body {
 
 .wrapper {
     padding: 100px;
-    width: 80vmin;
+    width: 80vmax;
     display: block;
     text-align: center;
     margin: 0 auto;
 }
 
 .roles {
-    font-size: 4vmin;
-    height: 5vmin;
+    font-size: 3vmax;
+    height: 5vmax;
     vertical-align: middle;
     overflow: hidden;
 }
 
 .roles div {
-    height: 5vmin;
+    height: 5vmax;
     transition: margin-top 0.5s ease-in-out;
     overflow: hidden;
 }
@@ -59,6 +59,8 @@ button {
 
     cursor: pointer;
 
+    height: 4vmax;
+    width: 8vmax;
     transition: 0.5s;
 }
 
