--- a/style.css
+++ b/style.css
@@ -1,81 +1,29 @@
 body {
-    background: #f1f1f1;
-    color: #222;
-    font-family: "Noto Sans KR", sans-serif;
+  background: #f1f1f1;
+  color: #222;
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: bold;
 }
 
 .wrapper {
-    padding: 100px;
-    width: 80vmax;
-    display: block;
-    text-align: center;
-    margin: 0 auto;
+  padding: 100px;
+  display: block;
+  text-align: center;
+  font-size: 24px;
+  margin: 0 auto;
 }
 
-.roles {
-    font-size: 3vmax;
-    height: 5vmax;
-    vertical-align: middle;
-    overflow: hidden;
+a {
+  text-decoration: none;
+  color: lightslategray;
+  font-weight: bolder;
 }
 
-.roles div {
-    height: 5vmax;
-    transition: margin-top 0.5s ease-in-out;
-    overflow: hidden;
+#contact {
+  margin-top: 100px;
+  font-size: 16px;
 }
 
-:root {
-    --button-color: #ffffff;
-    --button-bg-color: #0d6efd;
-    --button-hover-bg-color: #025ce2;
-}
-
-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-
-    background: var(--button-bg-color);
-    color: var(--button-color);
-
-    margin: 0;
-    padding: 0.5rem 1rem;
-
-    font-family: "Noto Sans KR", sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    text-align: center;
-    text-decoration: none;
-
-    border: none;
-    border-radius: 4px;
-
-    display: inline-block;
-    width: auto;
-
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-        0 2px 4px -1px rgba(0, 0, 0, 0.06);
-
-    cursor: pointer;
-
-    height: 4vmax;
-    width: 8vmax;
-    transition: 0.5s;
-}
-
-button:active,
-button:hover,
-button:focus {
-    background: var(--button-hover-bg-color);
-    outline: 0;
-}
-button:disabled {
-    opacity: 0.5;
-}
-
-form {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+#hi {
+  font-size: 32px;
 }
