--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-  padding: 100px;
+  padding: 20px;
   padding-bottom: 0;
   display: block;
   text-align: center;
@@ -18,6 +18,7 @@ body {
 #hi {
   font-size: 36px;
   font-weight: extra-bold;
+  margin-top: 50px;
   margin-bottom: 60px;
 }
 
